--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
       <h1>:(</h1>
+      <a href='github.com/quijir/blank'>View github repository</a>
     </body>
   </html>
