--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
       <h1>:(</h1>
-      <a href='github.com/quijir/blank'>View github repository</a>
+      <p>Nothing interesting here. maybe leave</p>
+      <a href='https://github.com/quijir/blank'>View github repository</a>
     </body>
   </html>
