--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
       <h1>:(</h1>
       <p>Nothing interesting here. maybe leave</p>
-      <a href='https://github.com/quijir/blank'>View github repository</a>
+      <a href='https://github.com/quijir/blank' target='_blank'>View github repository</a>
+      <p class='long'>Stop scrolling.</p>
     </body>
   </html>
