--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
       <h1>:(</h1>
-      <p>Nothing interesting here. maybe leave</p>
+      <p>Nothing interesting here. idk what to put</p>
       <a href='https://github.com/quijir/blank' target='_blank'>View github repository</a>
     </body>
   </html>
